TP-AR/TP-AR/src/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from src/Parser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseProgram -> Program                     (0)
	Program -> TopList                                 (1)
	TopList -> Top                                     (2)
	TopList -> TopList ';' Top                         (3)
	TopList -> TopList ';'                             (4)
	Top -> ident '=' Expr                              (5)
	Top -> Expr                                        (6)
	Top -> Cmd                                         (7)
	Cmd -> quit                                        (8)
	Cmd -> help                                        (9)
	Cmd -> clear                                       (10)
	Cmd -> browse                                      (11)
	Cmd -> reload                                      (12)
	Cmd -> compile string                              (13)
	Cmd -> createRel ident AttrDefList                 (14)
	Cmd -> insertRel ident TuplaList                   (15)
	Cmd -> dropRel ident                               (16)
	Cmd -> defineOP ident Expr                         (17)
	AttrDefList -> AttrDef                             (18)
	AttrDefList -> AttrDefList ',' AttrDef             (19)
	AttrDef -> ident ':' ident                         (20)
	TuplaList -> TuplaExp                              (21)
	TuplaList -> TuplaList ',' TuplaExp                (22)
	TuplaExp -> '(' Tupla ')'                          (23)
	Tupla -> TuplaVal                                  (24)
	Tupla -> Tupla ',' TuplaVal                        (25)
	TuplaVal -> Value                                  (26)
	TuplaVal -> ident                                  (27)
	Expr -> BinExpr                                    (28)
	BinExpr -> BinExpr union JoinExpr                  (29)
	BinExpr -> BinExpr interseccion JoinExpr           (30)
	BinExpr -> BinExpr diferencia JoinExpr             (31)
	BinExpr -> JoinExpr                                (32)
	JoinExpr -> JoinExpr productoNatural ProdExpr      (33)
	JoinExpr -> ProdExpr                               (34)
	ProdExpr -> ProdExpr producto BaseExpr             (35)
	ProdExpr -> ProdExpr division BaseExpr             (36)
	ProdExpr -> BaseExpr                               (37)
	BaseExpr -> seleccion '[' Cond ']' '(' Expr ')'    (38)
	BaseExpr -> proyeccion '[' AttrList ']' '(' Expr ')'   (39)
	BaseExpr -> renombre '[' ident '->' ident ']' '(' Expr ')'   (40)
	BaseExpr -> '(' Expr ')'                           (41)
	BaseExpr -> ident                                  (42)
	AttrList -> ident                                  (43)
	AttrList -> AttrList ',' ident                     (44)
	Cond -> Cond and Cond                              (45)
	Cond -> Cond or Cond                               (46)
	Cond -> not Cond                                   (47)
	Cond -> ident '=' ident                            (48)
	Cond -> ident '=' Value                            (49)
	Cond -> ident '!=' Value                           (50)
	Cond -> ident '<' Value                            (51)
	Cond -> ident '>' Value                            (52)
	Cond -> true                                       (53)
	Cond -> false                                      (54)
	Cond -> '(' Cond ')'                               (55)
	Value -> int                                       (56)
	Value -> string                                    (57)
	Value -> true                                      (58)
	Value -> false                                     (59)
	Value -> null                                      (60)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	seleccion      { TSelect }
	proyeccion     { TProject }
	renombre       { TRename }
	union          { TUnion }
	diferencia     { TDiferencia }
	interseccion   { TInterseccion }
	producto       { TProducto }
	division       { TDivision }
	productoNatural{ TNaturalJoin }
	and            { TAnd }
	or             { TOr }
	not            { TNot }
	true           { TTrue }
	false          { TFalse }
	'='            { TEq }
	'!='           { TNeq }
	'<'            { TLt }
	'>'            { TGt }
	'('            { TLParen }
	')'            { TRParen }
	'['            { TLBracket }
	']'            { TRBracket }
	','            { TComma }
	';'            { TSemicolon }
	'->'           { TArrow }
	':'            { TColon }
	quit           { TQuit }
	help           { THelp }
	clear          { TClear }
	browse         { TBrowse }
	compile        { TCompile }
	reload         { TReload }
	createRel      { TCreateRel }
	insertRel      { TInsertRel }
	dropRel        { TDropRel }
	defineOP       { TDefineOP }
	null           { TNull }
	ident          { TIdentifier $$ }
	int            { TInt $$ }
	string         { TString $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseProgram rule  0
	Program         rule  1
	TopList         rules 2, 3, 4
	Top             rules 5, 6, 7
	Cmd             rules 8, 9, 10, 11, 12, 13, 14, 15, 16, 17
	AttrDefList     rules 18, 19
	AttrDef         rule  20
	TuplaList       rules 21, 22
	TuplaExp        rule  23
	Tupla           rules 24, 25
	TuplaVal        rules 26, 27
	Expr            rule  28
	BinExpr         rules 29, 30, 31, 32
	JoinExpr        rules 33, 34
	ProdExpr        rules 35, 36, 37
	BaseExpr        rules 38, 39, 40, 41, 42
	AttrList        rules 43, 44
	Cond            rules 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55
	Value           rules 56, 57, 58, 59, 60

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	seleccion      shift, and enter state 10
	proyeccion     shift, and enter state 11
	renombre       shift, and enter state 12
	'('            shift, and enter state 13
	quit           shift, and enter state 14
	help           shift, and enter state 15
	clear          shift, and enter state 16
	browse         shift, and enter state 17
	compile        shift, and enter state 18
	reload         shift, and enter state 19
	createRel      shift, and enter state 20
	insertRel      shift, and enter state 21
	dropRel        shift, and enter state 22
	defineOP       shift, and enter state 23
	ident          shift, and enter state 24

	Program        goto state 25
	TopList        goto state 2
	Top            goto state 3
	Cmd            goto state 4
	Expr           goto state 5
	BinExpr        goto state 6
	JoinExpr       goto state 7
	ProdExpr       goto state 8
	BaseExpr       goto state 9

State 1


	seleccion      shift, and enter state 10
	proyeccion     shift, and enter state 11
	renombre       shift, and enter state 12
	'('            shift, and enter state 13
	quit           shift, and enter state 14
	help           shift, and enter state 15
	clear          shift, and enter state 16
	browse         shift, and enter state 17
	compile        shift, and enter state 18
	reload         shift, and enter state 19
	createRel      shift, and enter state 20
	insertRel      shift, and enter state 21
	dropRel        shift, and enter state 22
	defineOP       shift, and enter state 23
	ident          shift, and enter state 24

	TopList        goto state 2
	Top            goto state 3
	Cmd            goto state 4
	Expr           goto state 5
	BinExpr        goto state 6
	JoinExpr       goto state 7
	ProdExpr       goto state 8
	BaseExpr       goto state 9

State 2

	Program -> TopList .                                (rule 1)
	TopList -> TopList . ';' Top                        (rule 3)
	TopList -> TopList . ';'                            (rule 4)

	';'            shift, and enter state 43
	%eof           reduce using rule 1


State 3

	TopList -> Top .                                    (rule 2)

	';'            reduce using rule 2
	%eof           reduce using rule 2


State 4

	Top -> Cmd .                                        (rule 7)

	';'            reduce using rule 7
	%eof           reduce using rule 7


State 5

	Top -> Expr .                                       (rule 6)

	';'            reduce using rule 6
	%eof           reduce using rule 6


State 6

	Expr -> BinExpr .                                   (rule 28)
	BinExpr -> BinExpr . union JoinExpr                 (rule 29)
	BinExpr -> BinExpr . interseccion JoinExpr          (rule 30)
	BinExpr -> BinExpr . diferencia JoinExpr            (rule 31)

	union          shift, and enter state 40
	diferencia     shift, and enter state 41
	interseccion   shift, and enter state 42
	')'            reduce using rule 28
	';'            reduce using rule 28
	%eof           reduce using rule 28


State 7

	BinExpr -> JoinExpr .                               (rule 32)
	JoinExpr -> JoinExpr . productoNatural ProdExpr     (rule 33)

	union          reduce using rule 32
	diferencia     reduce using rule 32
	interseccion   reduce using rule 32
	productoNaturalshift, and enter state 39
	')'            reduce using rule 32
	';'            reduce using rule 32
	%eof           reduce using rule 32


State 8

	JoinExpr -> ProdExpr .                              (rule 34)
	ProdExpr -> ProdExpr . producto BaseExpr            (rule 35)
	ProdExpr -> ProdExpr . division BaseExpr            (rule 36)

	union          reduce using rule 34
	diferencia     reduce using rule 34
	interseccion   reduce using rule 34
	producto       shift, and enter state 37
	division       shift, and enter state 38
	productoNaturalreduce using rule 34
	')'            reduce using rule 34
	';'            reduce using rule 34
	%eof           reduce using rule 34


State 9

	ProdExpr -> BaseExpr .                              (rule 37)

	union          reduce using rule 37
	diferencia     reduce using rule 37
	interseccion   reduce using rule 37
	producto       reduce using rule 37
	division       reduce using rule 37
	productoNaturalreduce using rule 37
	')'            reduce using rule 37
	';'            reduce using rule 37
	%eof           reduce using rule 37


State 10

	BaseExpr -> seleccion . '[' Cond ']' '(' Expr ')'    (rule 38)

	'['            shift, and enter state 36


State 11

	BaseExpr -> proyeccion . '[' AttrList ']' '(' Expr ')'    (rule 39)

	'['            shift, and enter state 35


State 12

	BaseExpr -> renombre . '[' ident '->' ident ']' '(' Expr ')'    (rule 40)

	'['            shift, and enter state 34


State 13

	BaseExpr -> '(' . Expr ')'                          (rule 41)

	seleccion      shift, and enter state 10
	proyeccion     shift, and enter state 11
	renombre       shift, and enter state 12
	'('            shift, and enter state 13
	ident          shift, and enter state 33

	Expr           goto state 32
	BinExpr        goto state 6
	JoinExpr       goto state 7
	ProdExpr       goto state 8
	BaseExpr       goto state 9

State 14

	Cmd -> quit .                                       (rule 8)

	';'            reduce using rule 8
	%eof           reduce using rule 8


State 15

	Cmd -> help .                                       (rule 9)

	';'            reduce using rule 9
	%eof           reduce using rule 9


State 16

	Cmd -> clear .                                      (rule 10)

	';'            reduce using rule 10
	%eof           reduce using rule 10


State 17

	Cmd -> browse .                                     (rule 11)

	';'            reduce using rule 11
	%eof           reduce using rule 11


State 18

	Cmd -> compile . string                             (rule 13)

	string         shift, and enter state 31


State 19

	Cmd -> reload .                                     (rule 12)

	';'            reduce using rule 12
	%eof           reduce using rule 12


State 20

	Cmd -> createRel . ident AttrDefList                (rule 14)

	ident          shift, and enter state 30


State 21

	Cmd -> insertRel . ident TuplaList                  (rule 15)

	ident          shift, and enter state 29


State 22

	Cmd -> dropRel . ident                              (rule 16)

	ident          shift, and enter state 28


State 23

	Cmd -> defineOP . ident Expr                        (rule 17)

	ident          shift, and enter state 27


State 24

	Top -> ident . '=' Expr                             (rule 5)
	BaseExpr -> ident .                                 (rule 42)

	union          reduce using rule 42
	diferencia     reduce using rule 42
	interseccion   reduce using rule 42
	producto       reduce using rule 42
	division       reduce using rule 42
	productoNaturalreduce using rule 42
	'='            shift, and enter state 26
	';'            reduce using rule 42
	%eof           reduce using rule 42


State 25

	%start_parseProgram -> Program .                    (rule 0)

	%eof           accept


State 26

	Top -> ident '=' . Expr                             (rule 5)

	seleccion      shift, and enter state 10
	proyeccion     shift, and enter state 11
	renombre       shift, and enter state 12
	'('            shift, and enter state 13
	ident          shift, and enter state 33

	Expr           goto state 68
	BinExpr        goto state 6
	JoinExpr       goto state 7
	ProdExpr       goto state 8
	BaseExpr       goto state 9

State 27

	Cmd -> defineOP ident . Expr                        (rule 17)

	seleccion      shift, and enter state 10
	proyeccion     shift, and enter state 11
	renombre       shift, and enter state 12
	'('            shift, and enter state 13
	ident          shift, and enter state 33

	Expr           goto state 67
	BinExpr        goto state 6
	JoinExpr       goto state 7
	ProdExpr       goto state 8
	BaseExpr       goto state 9

State 28

	Cmd -> dropRel ident .                              (rule 16)

	';'            reduce using rule 16
	%eof           reduce using rule 16


State 29

	Cmd -> insertRel ident . TuplaList                  (rule 15)

	'('            shift, and enter state 66

	TuplaList      goto state 64
	TuplaExp       goto state 65

State 30

	Cmd -> createRel ident . AttrDefList                (rule 14)

	ident          shift, and enter state 63

	AttrDefList    goto state 61
	AttrDef        goto state 62

State 31

	Cmd -> compile string .                             (rule 13)

	';'            reduce using rule 13
	%eof           reduce using rule 13


State 32

	BaseExpr -> '(' Expr . ')'                          (rule 41)

	')'            shift, and enter state 60


State 33

	BaseExpr -> ident .                                 (rule 42)

	union          reduce using rule 42
	diferencia     reduce using rule 42
	interseccion   reduce using rule 42
	producto       reduce using rule 42
	division       reduce using rule 42
	productoNaturalreduce using rule 42
	')'            reduce using rule 42
	';'            reduce using rule 42
	%eof           reduce using rule 42


State 34

	BaseExpr -> renombre '[' . ident '->' ident ']' '(' Expr ')'    (rule 40)

	ident          shift, and enter state 59


State 35

	BaseExpr -> proyeccion '[' . AttrList ']' '(' Expr ')'    (rule 39)

	ident          shift, and enter state 58

	AttrList       goto state 57

State 36

	BaseExpr -> seleccion '[' . Cond ']' '(' Expr ')'    (rule 38)

	not            shift, and enter state 52
	true           shift, and enter state 53
	false          shift, and enter state 54
	'('            shift, and enter state 55
	ident          shift, and enter state 56

	Cond           goto state 51

State 37

	ProdExpr -> ProdExpr producto . BaseExpr            (rule 35)

	seleccion      shift, and enter state 10
	proyeccion     shift, and enter state 11
	renombre       shift, and enter state 12
	'('            shift, and enter state 13
	ident          shift, and enter state 33

	BaseExpr       goto state 50

State 38

	ProdExpr -> ProdExpr division . BaseExpr            (rule 36)

	seleccion      shift, and enter state 10
	proyeccion     shift, and enter state 11
	renombre       shift, and enter state 12
	'('            shift, and enter state 13
	ident          shift, and enter state 33

	BaseExpr       goto state 49

State 39

	JoinExpr -> JoinExpr productoNatural . ProdExpr     (rule 33)

	seleccion      shift, and enter state 10
	proyeccion     shift, and enter state 11
	renombre       shift, and enter state 12
	'('            shift, and enter state 13
	ident          shift, and enter state 33

	ProdExpr       goto state 48
	BaseExpr       goto state 9

State 40

	BinExpr -> BinExpr union . JoinExpr                 (rule 29)

	seleccion      shift, and enter state 10
	proyeccion     shift, and enter state 11
	renombre       shift, and enter state 12
	'('            shift, and enter state 13
	ident          shift, and enter state 33

	JoinExpr       goto state 47
	ProdExpr       goto state 8
	BaseExpr       goto state 9

State 41

	BinExpr -> BinExpr diferencia . JoinExpr            (rule 31)

	seleccion      shift, and enter state 10
	proyeccion     shift, and enter state 11
	renombre       shift, and enter state 12
	'('            shift, and enter state 13
	ident          shift, and enter state 33

	JoinExpr       goto state 46
	ProdExpr       goto state 8
	BaseExpr       goto state 9

State 42

	BinExpr -> BinExpr interseccion . JoinExpr          (rule 30)

	seleccion      shift, and enter state 10
	proyeccion     shift, and enter state 11
	renombre       shift, and enter state 12
	'('            shift, and enter state 13
	ident          shift, and enter state 33

	JoinExpr       goto state 45
	ProdExpr       goto state 8
	BaseExpr       goto state 9

State 43

	TopList -> TopList ';' . Top                        (rule 3)
	TopList -> TopList ';' .                            (rule 4)

	seleccion      shift, and enter state 10
	proyeccion     shift, and enter state 11
	renombre       shift, and enter state 12
	'('            shift, and enter state 13
	';'            reduce using rule 4
	quit           shift, and enter state 14
	help           shift, and enter state 15
	clear          shift, and enter state 16
	browse         shift, and enter state 17
	compile        shift, and enter state 18
	reload         shift, and enter state 19
	createRel      shift, and enter state 20
	insertRel      shift, and enter state 21
	dropRel        shift, and enter state 22
	defineOP       shift, and enter state 23
	ident          shift, and enter state 24
	%eof           reduce using rule 4

	Top            goto state 44
	Cmd            goto state 4
	Expr           goto state 5
	BinExpr        goto state 6
	JoinExpr       goto state 7
	ProdExpr       goto state 8
	BaseExpr       goto state 9

State 44

	TopList -> TopList ';' Top .                        (rule 3)

	';'            reduce using rule 3
	%eof           reduce using rule 3


State 45

	BinExpr -> BinExpr interseccion JoinExpr .          (rule 30)
	JoinExpr -> JoinExpr . productoNatural ProdExpr     (rule 33)

	union          reduce using rule 30
	diferencia     reduce using rule 30
	interseccion   reduce using rule 30
	productoNaturalshift, and enter state 39
	')'            reduce using rule 30
	';'            reduce using rule 30
	%eof           reduce using rule 30


State 46

	BinExpr -> BinExpr diferencia JoinExpr .            (rule 31)
	JoinExpr -> JoinExpr . productoNatural ProdExpr     (rule 33)

	union          reduce using rule 31
	diferencia     reduce using rule 31
	interseccion   reduce using rule 31
	productoNaturalshift, and enter state 39
	')'            reduce using rule 31
	';'            reduce using rule 31
	%eof           reduce using rule 31


State 47

	BinExpr -> BinExpr union JoinExpr .                 (rule 29)
	JoinExpr -> JoinExpr . productoNatural ProdExpr     (rule 33)

	union          reduce using rule 29
	diferencia     reduce using rule 29
	interseccion   reduce using rule 29
	productoNaturalshift, and enter state 39
	')'            reduce using rule 29
	';'            reduce using rule 29
	%eof           reduce using rule 29


State 48

	JoinExpr -> JoinExpr productoNatural ProdExpr .     (rule 33)
	ProdExpr -> ProdExpr . producto BaseExpr            (rule 35)
	ProdExpr -> ProdExpr . division BaseExpr            (rule 36)

	union          reduce using rule 33
	diferencia     reduce using rule 33
	interseccion   reduce using rule 33
	producto       shift, and enter state 37
	division       shift, and enter state 38
	productoNaturalreduce using rule 33
	')'            reduce using rule 33
	';'            reduce using rule 33
	%eof           reduce using rule 33


State 49

	ProdExpr -> ProdExpr division BaseExpr .            (rule 36)

	union          reduce using rule 36
	diferencia     reduce using rule 36
	interseccion   reduce using rule 36
	producto       reduce using rule 36
	division       reduce using rule 36
	productoNaturalreduce using rule 36
	')'            reduce using rule 36
	';'            reduce using rule 36
	%eof           reduce using rule 36


State 50

	ProdExpr -> ProdExpr producto BaseExpr .            (rule 35)

	union          reduce using rule 35
	diferencia     reduce using rule 35
	interseccion   reduce using rule 35
	producto       reduce using rule 35
	division       reduce using rule 35
	productoNaturalreduce using rule 35
	')'            reduce using rule 35
	';'            reduce using rule 35
	%eof           reduce using rule 35


State 51

	BaseExpr -> seleccion '[' Cond . ']' '(' Expr ')'    (rule 38)
	Cond -> Cond . and Cond                             (rule 45)
	Cond -> Cond . or Cond                              (rule 46)

	and            shift, and enter state 90
	or             shift, and enter state 91
	']'            shift, and enter state 92


State 52

	Cond -> not . Cond                                  (rule 47)

	not            shift, and enter state 52
	true           shift, and enter state 53
	false          shift, and enter state 54
	'('            shift, and enter state 55
	ident          shift, and enter state 56

	Cond           goto state 89

State 53

	Cond -> true .                                      (rule 53)

	and            reduce using rule 53
	or             reduce using rule 53
	')'            reduce using rule 53
	']'            reduce using rule 53


State 54

	Cond -> false .                                     (rule 54)

	and            reduce using rule 54
	or             reduce using rule 54
	')'            reduce using rule 54
	']'            reduce using rule 54


State 55

	Cond -> '(' . Cond ')'                              (rule 55)

	not            shift, and enter state 52
	true           shift, and enter state 53
	false          shift, and enter state 54
	'('            shift, and enter state 55
	ident          shift, and enter state 56

	Cond           goto state 88

State 56

	Cond -> ident . '=' ident                           (rule 48)
	Cond -> ident . '=' Value                           (rule 49)
	Cond -> ident . '!=' Value                          (rule 50)
	Cond -> ident . '<' Value                           (rule 51)
	Cond -> ident . '>' Value                           (rule 52)

	'='            shift, and enter state 84
	'!='           shift, and enter state 85
	'<'            shift, and enter state 86
	'>'            shift, and enter state 87


State 57

	BaseExpr -> proyeccion '[' AttrList . ']' '(' Expr ')'    (rule 39)
	AttrList -> AttrList . ',' ident                    (rule 44)

	']'            shift, and enter state 82
	','            shift, and enter state 83


State 58

	AttrList -> ident .                                 (rule 43)

	']'            reduce using rule 43
	','            reduce using rule 43


State 59

	BaseExpr -> renombre '[' ident . '->' ident ']' '(' Expr ')'    (rule 40)

	'->'           shift, and enter state 81


State 60

	BaseExpr -> '(' Expr ')' .                          (rule 41)

	union          reduce using rule 41
	diferencia     reduce using rule 41
	interseccion   reduce using rule 41
	producto       reduce using rule 41
	division       reduce using rule 41
	productoNaturalreduce using rule 41
	')'            reduce using rule 41
	';'            reduce using rule 41
	%eof           reduce using rule 41


State 61
